@@ -12,6 +12,7 @@ import io.github.classgraph.ClassGraph;
 import io.github.classgraph.ClassInfo;
 import io.github.classgraph.MethodInfo;
 import io.github.classgraph.ScanResult;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -27,13 +28,20 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 public class PluginFactory {
 
+  private static final String[] VALIDATOR_PACKAGES = {
+    "com.linkedin.metadata.aspect.plugins.validation", "com.linkedin.metadata.aspect.validation"
+  };
+  private static final String[] HOOK_PACKAGES = {
+    "com.linkedin.metadata.aspect.plugins.hooks", "com.linkedin.metadata.aspect.hooks"
+  };
+
   public static PluginFactory withCustomClasspath(
       @Nullable PluginConfiguration pluginConfiguration, @Nonnull List<ClassLoader> classLoaders) {
     return new PluginFactory(pluginConfiguration, classLoaders);
   }
 
   public static PluginFactory withConfig(@Nullable PluginConfiguration pluginConfiguration) {
-    return PluginFactory.withCustomClasspath(pluginConfiguration, List.of());
+    return PluginFactory.withCustomClasspath(pluginConfiguration, Collections.emptyList());
   }
 
   public static PluginFactory empty() {
@@ -173,44 +181,35 @@ public class PluginFactory {
   private List<AspectPayloadValidator> buildAspectPayloadValidators(
       @Nullable PluginConfiguration pluginConfiguration) {
     return pluginConfiguration == null
-        ? List.of()
+        ? Collections.emptyList()
         : applyDisable(
             build(
                 AspectPayloadValidator.class,
                 pluginConfiguration.getAspectPayloadValidators(),
-                "com.linkedin.metadata.aspect.plugins.validation"));
+                VALIDATOR_PACKAGES));
   }
 
   private List<MutationHook> buildMutationHooks(@Nullable PluginConfiguration pluginConfiguration) {
     return pluginConfiguration == null
-        ? List.of()
+        ? Collections.emptyList()
         : applyDisable(
-            build(
-                MutationHook.class,
-                pluginConfiguration.getMutationHooks(),
-                "com.linkedin.metadata.aspect.plugins.hooks"));
+            build(MutationHook.class, pluginConfiguration.getMutationHooks(), HOOK_PACKAGES));
   }
 
   private List<MCLSideEffect> buildMCLSideEffects(
       @Nullable PluginConfiguration pluginConfiguration) {
     return pluginConfiguration == null
-        ? List.of()
+        ? Collections.emptyList()
         : applyDisable(
-            build(
-                MCLSideEffect.class,
-                pluginConfiguration.getMclSideEffects(),
-                "com.linkedin.metadata.aspect.plugins.hooks"));
+            build(MCLSideEffect.class, pluginConfiguration.getMclSideEffects(), HOOK_PACKAGES));
   }
 
   private List<MCPSideEffect> buildMCPSideEffects(
       @Nullable PluginConfiguration pluginConfiguration) {
     return pluginConfiguration == null
-        ? List.of()
+        ? Collections.emptyList()
         : applyDisable(
-            build(
-                MCPSideEffect.class,
-                pluginConfiguration.getMcpSideEffects(),
-                "com.linkedin.metadata.aspect.plugins.hooks"));
+            build(MCPSideEffect.class, pluginConfiguration.getMcpSideEffects(), HOOK_PACKAGES));
   }
 
   private <T> List<T> build(
@@ -226,6 +225,11 @@ public class PluginFactory {
               config -> {
                 try {
                   ClassInfo classInfo = classMap.get(config.getClassName());
+                  if (classInfo == null) {
+                    throw new IllegalStateException(
+                        String.format(
+                            "The following class cannot be loaded: %s", config.getClassName()));
+                  }
                   MethodInfo constructorMethod = classInfo.getConstructorInfo().get(0);
                   return Stream.of(
                       (T) constructorMethod.loadClassAndGetConstructor().newInstance(config));
